# core

./: Cargo.toml  Makefile.toml  README.md  clippy.toml
api/: Cargo.toml
api/src/: api.rs  http.rs  lib.rs
keyvault/: Cargo.toml
keyvault/src/: lib.rs
messaging/: Cargo.toml
messaging/fixtures/: partitions.csv
messaging/src/: consumer.rs  handler_driver.rs  lib.rs  partitioner.rs  producer.rs  schema_registry.rs  types.rs
telemetry/: Cargo.toml
telemetry/src/: export.rs  init.rs  lib.rs  retry.rs  tracing.rs
