[workspace]
members = ["crates/*", "examples/*"]
resolver = "3"

[workspace.package]
authors = ["Propellerhead"]
categories = ["gtfs"]
edition = "2024"
exclude = [".*", "/docs"]
homepage = "https://propellerhead.co.nz"
keywords = ["realtime", "timetables"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AucklandTransportCode/at_digital_api_rs"
rust-version = "1.88"
version = "0.1.0"

[workspace.lints.rust]
# missing_docs = "warn"
unused_extern_crates = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[workspace.dependencies]
anyhow = "1.0.98"
async-nats = "0.42.0"
axum = { version = "0.8.4", features = ["macros"] }
bytes = "1.10.1"
cuid2 = "0.1.4"
dotenv = "0.15.0"
futures = "0.3.31"
http = "1.3.1"
moka = { version = "0.12.10", features = ["future"] }
opentelemetry = "0.30.0"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = "1.47.0"
tower-http = { version = "0.6.6", features = ["compression-gzip", "cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
wasi-bindings = { git = "https://github.com/credibil-grid/wasmgrid" }
wasi-http-ext = { git = "https://github.com/credibil-grid/wasmgrid" }

api = { path = "crates/api" }
r9k_data = { path = "crates/r9k-data" }
telemetry = { path = "crates/telemetry" }

# [patch."https://github.com/credibil-grid/wasmgrid"]
# wasi-http-ext = { path = "../../github.com/credibil-grid/wasmgrid/crates/wasi-http-ext" }

[profile.release]
lto = "thin"
opt-level = "s"
strip = "symbols"
