[workspace]
members = ["api", "telemetry"]
resolver = "3"

[workspace.package]
authors = ["Propellerhead"]
edition = "2024"
exclude = [".*", "/docs"]
homepage = "https://propellerhead.co.nz"
readme = "README.md"
repository = "https://github.com/AucklandTransportCode/core"
rust-version = "1.88"
version = "0.1.0"

[workspace.lints.rust]
# missing_docs = "warn"
unused_extern_crates = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[workspace.dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
http = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.47.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"


[profile.release]
lto = "thin"
opt-level = "s"
strip = "symbols"
