[package]
name = "messaging"
version = "0.1.0"
edition.workspace = true


[dependencies]
anyhow.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
futures = "0.3"
rdkafka = { version = "0.38", features = ["cmake-build", "tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.16"
tracing = "0.1"