[package]
name = "messaging"
version = "0.1.0"
edition.workspace = true


[dependencies]
anyhow.workspace = true
base64 = "0.22"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
futures = "0.3"
rdkafka = { version = "0.38", features = ["cmake-build", "tokio"] }
schema-registry-client = { version = "0.4.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.16"
tracing = "0.1"
jsonschema = "0.33.0"
