[package]
name = "telemetry"
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
http.workspace = true
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
rand = "0.9.2"
serde.workspace = true
tokio = { workspace = true, features = ["full"] }
tower = "0.5.2"
tracing.workspace = true
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
